# rajoybot

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml  docker.yml  test.yml
app/: bot.py  pretty_uptime.py
app/persistence/: __init__.py  tools.py
rajoybot-rs/: Cargo.toml  Dockerfile
rajoybot-rs/src/: bot.rs
src/: bot.rs  config.rs  main.rs  search.rs  uptime.rs
src/persistence/: mod.rs  tools.rs
tests/: conftest.py  test_config.py  test_persistence.py  test_pretty_uptime.py  test_search.py
