[package]
name = "rajoybot"
version = "0.1.0"
edition = "2024"
description = "Telegram inline bot for Rajoy audio clips"

[dependencies]
teloxide = { version = "0.14", features = ["macros", "webhooks-axum"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql", "any"] }
url = "2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deunicode = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rand = "0.9"
os_info = "3"
anyhow = "1"
